# FBBForensics

./: .gitattributes  .gitignore  CMakeLists.txt  FBBForensics.props  FBBForensics.sln  FBBForensics.vcxproj  FBBForensics.vcxproj.filters  README.md  ShowcaseQt.props  ShowcaseQt.sln  ShowcaseQt.vcxproj  ShowcaseQt.vcxproj.filters
src/: benchmarkrecorder.cpp  benchmarkrecorder.h  booticecarvingworker.cpp  booticecarvingworker.h  fbinstcarvingworker.cpp  fbinstcarvingworker.h  imagereader.cpp  imagereader.h  main.cpp  rawdevice.cpp  rawdevice.h  showcaseanalyzer.cpp  showcaseanalyzer.h  showcaseapp.cpp  showcaseapp.h  signaturecarver.cpp  signaturecarver.h
templates/010editor/: Bootice.bt  FbinstTool.bt  README.md
tools/: current_carving_hash_test.cpp  fbinst_hidden_hash_test.cpp  targeted_signature_validation.cpp
